--- a/Getting Started/Demo/TextureDemo/TextureDemo/TextureDemo.vcxproj
+++ b/Getting Started/Demo/TextureDemo/TextureDemo/TextureDemo.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="FileUtils.cpp" />
     <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="UIObject.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -163,6 +164,7 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="FileUtils.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="UIObject.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
