--- a/Getting Started/Demo/TextureDemo/TextureDemo/TextureDemo.vcxproj.filters
+++ b/Getting Started/Demo/TextureDemo/TextureDemo/TextureDemo.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="PlayerGameObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UIObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PlayerGameObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UIObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
