Basic Health UI for Player

--- a/Getting Started/Demo/TextureDemo/TextureDemo/TextureDemo.vcxproj.filters
+++ b/Getting Started/Demo/TextureDemo/TextureDemo/TextureDemo.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="UIObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HealthUI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="UIObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HealthUI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
