--- a/Getting Started/Demo/TextureDemo/TextureDemo/TextureDemo.vcxproj.filters
+++ b/Getting Started/Demo/TextureDemo/TextureDemo/TextureDemo.vcxproj.filters
@@ -62,6 +62,12 @@
     <ClInclude Include="HealthUI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shader.vert">
